--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="sec3">
         <h1>BUY AN APE</h1>
         <p>The initial sale has sold out. To get your <br>Bored Ape, check out the collection on <br>OpenSea.</p>
-        <button>BUY AN APE ON OPENSEA</button>
+        <button><a href="#">BUY AN APE ON OPENSEA</a></button>
     </div> <hr>
 
     <div class="sec4">
