--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h2>100%</h2>
         </div>
         <div class="items2">
-            <p>We pay back our moms.</p>
+            <p class="we-pay">We pay back our moms.</p>
             <p> We release the Caged Apes. 5 Caged Apes (tokens held back from the sale) are airdropped to random Apeholders.</p>
             <p>BAYC gets its own YouTube channel, BAYC LoFi Radio - Beats to Ape into Shitcoins To.</p>
             <p>Member-Exclusive BAYC Merch Store gets unlocked, featuring Limited Edition tees, hoodies, and other goodies.</p>
