--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -122,25 +123,29 @@
     </div>
 
     <div class="sec10">
-        <div class="items1">
-            <h2>10%</h2>
-            <h2>20%</h2>
-            <h2>40%</h2>
-            <h2>60%</h2>
-            <h2>80%</h2>
-            <h2>90%</h2>
-            <h2>100%</h2>
-        </div>
-        <div class="items2">
-            <p class="we-pay">We pay back our moms.</p>
-            <p> We release the Caged Apes. 5 Caged Apes (tokens held back from the sale) are airdropped to random Apeholders.</p>
-            <p>BAYC gets its own YouTube channel, BAYC LoFi Radio - Beats to Ape into Shitcoins To.</p>
-            <p>Member-Exclusive BAYC Merch Store gets unlocked, featuring Limited Edition tees, hoodies, and other goodies.</p>
-            <p>The clubhouse image becomes interactive and the Mysterious Note becomes legible, beginning a treasure hunt. The first to solve the mystery will be rewarded 5 ETH and a Bored Ape.</p>
-            <p> We pay back our moms.</p>
-            <p>The Mutant Ape (NFT Breeding) Arcade Machine gets ﬁxed. And we cook up new ways to ape with our friends.</p>
 
+        <div class="items1">
+            <span>10%</span>
+            <span>20%</span>
+            <span>40%</span>
+            <span>60%</span>
+            <span>80%</span>
+            <span>100%</span>
         </div>
+
+        <div class="items2">
+            <ul>
+             <li>We pay back our moms.</li>
+             <li>We release the Caged Apes. 5 Caged Apes (tokens held back from the sale) are airdropped to random Apeholders.</li>
+             <li>BAYC gets its own YouTube channel, BAYC LoFi Radio - Beats to Ape into Shitcoins To.</li>
+             <li>Member-Exclusive BAYC Merch Store gets unlocked, featuring Limited Edition tees, hoodies, and other goodies.</li>
+             <li>The clubhouse image becomes interactive and the Mysterious Note becomes legible, beginning a treasure hunt. The first to solve the mystery will be rewarded 5 ETH and a Bored Ape.</li>
+             <li>We pay back our moms.</li>
+             <li>The Mutant Ape (NFT Breeding) Arcade Machine gets ﬁxed. And we cook up new ways to ape with our friends.</li>
+ 
+            </ul>
+         </div>
+        
         <div class="items3">
             <img src="images/shirt.jpg" alt="">
         </div>
@@ -150,3 +155,4 @@
 
 </body>
 </html>
+
