--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,7 +31,7 @@
 
     <div class="sec1">
         <div class="left-col">
-        <h1>WELCOME TO THE<br>BORED APE YACHT CLUB</h1>
+        <h1>WELCOME TO THE <br>BORED APE YACHT CLUB</h1>
         <p>BAYC is a collection of 10,000 Bored Ape NFTs—unique digital collectibles living on the Ethereum blockchain. Your Bored Ape doubles as your Yacht Club membership card, and grants access to members-only benefits, the first of which is access to THE BATHROOM, a collaborative graffiti board. Future areas and perks can be unlocked by the community through roadmap activation.</p>
         </div>
 
@@ -139,7 +140,7 @@
              <li>BAYC gets its own YouTube channel, BAYC LoFi Radio - Beats to Ape into Shitcoins To.</li>
              <li>Member-Exclusive BAYC Merch Store gets unlocked, featuring Limited Edition tees, hoodies, and other goodies.</li>
              <li>The clubhouse image becomes interactive and the Mysterious Note becomes legible, beginning a treasure hunt. The first to solve the mystery will be rewarded 5 ETH and a Bored Ape.</li>
-             <li>We pay back our moms.</li>
+             <li class="none">The Bored Ape liquidity pool is initiated.</li>
              <li>The Mutant Ape (NFT Breeding) Arcade Machine gets ﬁxed. And we cook up new ways to ape with our friends.</li>
  
             </ul>
