--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -63,7 +62,10 @@
     <div class="sec3">
         <h1>BUY AN APE</h1>
         <p>The initial sale has sold out. To get your <br>Bored Ape, check out the collection on <br>OpenSea.</p>
-        <button><a href="#">BUY AN APE ON OPENSEA</a></button>
+        <div class="btn">
+            <button>BUY AN APE ON OPENSEA</button>
+        </div>
+        
     </div> <hr>
 
     <div class="sec4">
@@ -101,6 +103,31 @@
         <p class="p5">Gain additional benefits through roadmap activations</p>
 
     </div> <hr>
+
+    <div class="sec7mobile">
+        <div>
+            <img src="images/icon1.jpg" alt="">
+             <p>10,000 Provably-rare Bored Ape tokens</p>
+        </div>
+        <div>
+            <img src="images/icon2.jpg" alt="">
+            <p>Fair Launch, fair distribution: All apes cost 0.08 ETH</p>
+        </div>
+        <div>
+            <img src="images/icon3.jpg" alt="">
+            <p>Ownership and commercial usage rights given to the consumer over their NFT</p>
+
+        </div>
+        <div>
+            <img src="images/icon4.jpg" alt="">
+            <p>The Bathroom: A member's-only graffiti board</p>
+        </div>
+        <div>
+            <img src="images/icon5.jpg" alt="">
+            <p>Gain additional benefits through roadmap activations</p>
+
+    </div> <hr>
+        </div>
 
     <div class="sec8">
         <div class="left">
